fixed sequelize issue

--- a/checkout-system/src/.env
+++ b/checkout-system/src/.env
@@ -1,5 +1,5 @@
-DB_NAME=checkoutdb
+DB_NAME=sp-purhcase
 DB_USER=postgres
-DB_PASS=yourpassword
+DB_PASS=2805
 DB_HOST=localhost
 DB_DIALECT=postgres
