--- a/checkout-system/package.json
+++ b/checkout-system/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^2.2.0",
+    "dotenv": "^17.0.1",
     "express": "^5.1.0",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
