--- a/checkout-system/package.json
+++ b/checkout-system/package.json
@@ -19,6 +19,7 @@
     "typescript": "^5.8.3"
   },
   "scripts": {
-    "dev": "ts-node-dev --respawn src/app.ts"
+    "dev": "ts-node-dev --respawn src/app.ts",
+    "seed": "ts-node src/seeders/productSeeder.ts"
   }
 }
